# cabinet_tester

./: LICENSE  README.md  setup.cfg
electrical_schemes/: Cable & cabinet assembly list E40 S7-1500 PLC.xlsx  Cable & cabinet assembly list E50.xlsx  Cable & cabinet assembly list F25.xlsx  Cable & cabinet assembly list S25.xlsx
src/: IOLIST.json  Tester.py  create_project.py  create_test_project.py  main.py  main.tcss  pop_up.py  prompt.tcss  run_test.py  test_tree.css  test_tree.py  test_tree.tcss  tester.tcss  testmcp.py  utils.py
test_results/: connections.json  test_results.json  test_results_test.json  testing_components_answers.json
