[metadata]
name = factuur generator
description = Een terminal applicatie voor het maken van facturen
author = Quintus Kessler
author_email = quintusk@hotmail.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/quintussk/cabinet_tester
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src
install_requires =
    importlib-metadata; python_version<"3.8"
    rich
    pandas
    textual
    asyncio
    openpyxl
    pathlib

